--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,14 @@ h3 {
     color: rgb(78, 20, 75);
     margin-top: -30px;
 }
+h4 {
+    margin-left: 190px;
+    font-family: 'Silkscreen', cursive;
+    font-size: 20px;
+    color: rgb(78, 20, 75);
+    margin-top: -30px;
+    margin-bottom: 45px;
+}
 h1 {
     font-family: 'Silkscreen', cursive;
     font-size: 54px;
